--- a/css/_.css
+++ b/css/_.css
@@ -12,7 +12,7 @@ body{
     z-index: 0;
 }
 button{
-    font-size: 25vw;
+    font-size: 18vw;
     width: 95%;
     height: 18%;
     margin: 2%;
@@ -21,5 +21,6 @@ button{
     font-style: italic;
     z-index: 1;
     position: relative;
+    box-shadow: #a3b5ff 0px 0px 16px 5px;
     text-align: center;
 }
